--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -12,11 +12,6 @@
 
 <body>
 
-<svg id='plt'></svg>
-<div id="goto">
-  <a href="index-no-sidebar.html">See in Graph</a>
-</div>
-
 <!-- side container -->
 <div class='side-container'>
   <!-- tabs for side content -->
@@ -24,14 +19,6 @@
     <li class='nav-item'>
       <a href="#search" class="nav-link active" data-toggle='tab'>About</a>
     </li>
-
-    <!--<li class="nav-item">-->
-      <!--<a href="#filter" class="nav-link" data-toggle="tab">Filter</a>-->
-    <!--</li>-->
-
-    <!--<li class="nav-item">-->
-      <!--<a href="#sign-data" class="nav-link" data-toggle="tab">Sign Data</a>-->
-    <!--</li>-->
   </ul>
 
   <!-- contents under each tab -->
@@ -114,50 +101,15 @@
 
       </div>
     </div>
-    <!--&lt;!&ndash; Under the filter tab &ndash;&gt;-->
-    <!--<div class="tab-pane fade" id="filter">-->
-      <!--<div class='inside-tab-content'>-->
-        <!--<div class="filter-top">-->
-          <!--<a href="#">Filter Info</a> <span>|</span> <a href="#">Remove Filters</a>-->
-        <!--</div>-->
-
-        <!--&lt;!&ndash; Drop down content &ndash;&gt;-->
-        <!--<div class="filter-bottom">-->
-          <!--<div class='accordion' id='accordion-content'>-->
-            <!--<div class="card">-->
-              <!--<div class="card-header" id='heading-one'>-->
-                <!--<h2>-->
-                  <!--<button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapse-one">-->
-                    <!--What is html-->
-                  <!--</button>-->
-                <!--</h2>-->
-              <!--</div>-->
-              <!--<div id="collapse-one" class="collapse" aria-labelledby="heading-one" data-parent="#accordion-content">-->
-                <!--<div class="card-body">-->
-                  <!--<p></p>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-
-          <!--</div>-->
-        <!--</div>-->
-
-      <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="tab-pane fade" id="sign-data">-->
-      <!--<div class='inside-tab-content'>-->
-        <!--<h4 class="mt-2">Messages tab content</h4>-->
-        <!--<p>Donec vel placerat quam, ut euismod risus. Sed a mi suscipit, elementum sem a, hendrerit-->
-          <!--velit.-->
-          <!--Donec at erat magna. Sed dignissim orci nec eleifend egestas. Donec eget mi consequat massa-->
-          <!--vestibulum laoreet. Mauris et ultrices nulla, malesuada volutpat ante. Fusce ut orci lorem.-->
-          <!--Donec molestie libero in tempus imperdiet. Cum sociis natoque penatibus et magnis.-->
-        <!--</p>-->
-      <!--</div>-->
-    <!--</div>-->
-
   </div>
+</div>
+
+<div id="svgDiv">
+  <svg id='plt'></svg>
+</div>
+
+<div id="goto">
+  <a href="index-no-sidebar.html">See in Graph</a>
 </div>
 
 <!-- JS imports -->
@@ -165,3 +117,4 @@
 <script src="js/scatterplot_mat.js"></script>
 <script src="js/user-interface.js"></script>
 </body>
+
