--- a/visualization/index.html
+++ b/visualization/index.html
@@ -67,7 +67,7 @@
                    aria-label="Search"/>
 
             <li>
-                <a href="#" onclick="reset()" class="download">Reset Graph</a>
+                <a href="#" onclick="reset()" class="download" style="background-color:#1E0B66;color:#fff;">Reset Graph</a>
             </li>
 
 
@@ -75,7 +75,7 @@
 
         <ul class="list-unstyled CTAs">
             <li class="active">
-                <a id="signDataList" class="dropdown-toggle collapsed" href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Sign
+                <a id="signDataList" class="dropdown-toggle collapsed" href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" style="background-color:#1E0B66;">Sign
                     Data</a>
                 <ul class="collapse list-unstyled" id="homeSubmenu">
                     <li><br/>
@@ -87,7 +87,7 @@
 
         <ul class="list-unstyled CTAs">
             <li class="active">
-                <a id="filters" class="dropdown-toggle collapsed" href="#filter_options" data-toggle="collapse" aria-expanded="false">Filters
+                <a id="filters" class="dropdown-toggle collapsed" href="#filter_options" data-toggle="collapse" aria-expanded="false" style="background-color:#1E0B66;">Filters
                     </a>
                 <ul class="collapse list-unstyled" id="filter_options">
                     <li><br/>                        
