update name of undo button for filters

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -130,7 +130,7 @@
                                                         </ul>
                                                         <div class="row">
                                                             <div class="col-md-6">
-                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Reset</button>
+                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Remove Filter</button>
                                                             </div>
                                                             <div class="col-md-3"></div>
                                                             <div class="col-md-3">
@@ -158,7 +158,7 @@
                                                             </div>
                                                             <div class="row">
                                                                 <div class="col-md-6">
-                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Reset</button>
+                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Remove Filter</button>
                                                                 </div>
                                                                 <div class="col-md-3"></div>
                                                                 <div class="col-md-3">
@@ -189,7 +189,7 @@
                                                             </div>                                      
                                                             <div class="row">
                                                                 <div class="col-md-6">
-                                                                    <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Reset</button>
+                                                                    <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Remove Filter</button>
                                                                 </div>
                                                                 <div class="col-md-3"></div>
                                                                 <div class="col-md-3">
