Make network graph and sidebar to be updated accrodingly clicking see in graph on pairplots page

--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -108,7 +108,7 @@
   </div>
 
   <div id="goto">
-    <a href="index-no-sidebar.html">See in Graph</a>
+    <a href="index.html">See in Graph</a>
   </div>
 
   <!-- JS imports -->
