fix page navigation

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -253,7 +253,7 @@
         </nav>
         <svg id='viz'></svg>
         <div id="goto">
-            <a href="scatterplot.html">See Pair Plots</a>
+            <a href="scatterplot-sidebar.html">See Pair Plots</a>
         </div>
 
     </div>
