Rename some files to be prod ready, fix bug with search being able to search disabled nodes.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -253,7 +253,7 @@
         </nav>
         <svg id='viz'></svg>
         <div id="goto">
-            <a href="scatterplot-sidebar.html">See Pair Plots</a>
+            <a href="scatterplot.html">See Pair Plots</a>
         </div>
 
     </div>
@@ -276,7 +276,7 @@
 <!-- APPLICATION SCRIPTS -->
 <script src="js/filters_data.js"></script>
 <script src="js/templates.js"></script>
-<script src="js/d3-sidebar.js"></script>
+<script src="js/d3.js"></script>
 <script
         src="//code.jquery.com/ui/1.12.0/jquery-ui.min.js"
         integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
