Make data count and boundary report avaiable on brushing nodes

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -88,7 +88,7 @@
         <ul class="list-unstyled CTAs">
             <li class="active">
                 <a id="filters" class="dropdown-toggle collapsed" href="#filter_options" data-toggle="collapse" aria-expanded="false" style="background-color:#433089;">Filters
-                    </a>
+                </a>
                 <ul class="collapse list-unstyled" id="filter_options">
                     <li><br/>                        
                 <div class="row">
@@ -130,11 +130,11 @@
                                                         </ul>
                                                         <div class="row">
                                                             <div class="col-md-6">
-                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Remove Filter</button>
+                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter" name="removeFilter">Remove Filter</button>
                                                             </div>
                                                             <div class="col-md-3"></div>
                                                             <div class="col-md-3">
-                                                                <button class="btn btn-link" onclick="submit('{{@../key}}','{{category}}')" type="button">Submit</button>
+                                                                <button class="btn btn-link" onclick="submit('{{@../key}}','{{category}}')" type="button" name="submit">Submit</button>
                                                             </div>                                 
                                                         </div>
                                                     </div>
@@ -158,11 +158,11 @@
                                                             </div>
                                                             <div class="row">
                                                                 <div class="col-md-6">
-                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Remove Filter</button>
+                                                                <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter" name="removeFilter">Remove Filter</button>
                                                                 </div>
                                                                 <div class="col-md-3"></div>
                                                                 <div class="col-md-3">
-                                                                    <button class="btn btn-link" onclick="submit('{{@../key}}','{{category}}')" type="button">Submit</button>
+                                                                    <button class="btn btn-link" onclick="submit('{{@../key}}','{{category}}')" type="button" name="submit">Submit</button>
                                                                 </div>                          
                                                             </div>                                  
                                                         </div>                                     
@@ -189,11 +189,11 @@
                                                             </div>                                      
                                                             <div class="row">
                                                                 <div class="col-md-6">
-                                                                    <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter">Remove Filter</button>
+                                                                    <button class="btn btn-link" onclick="resetFilterOptions('{{category}}')" type="button" title="Cancel This Filter" name="removeFilter">Remove Filter</button>
                                                                 </div>
                                                                 <div class="col-md-3"></div>
                                                                 <div class="col-md-3">
-                                                                    <button class="btn btn-link" onclick="submit('{{@../key}}','{{category}}')" type="button">Submit</button>
+                                                                    <button class="btn btn-link" onclick="submit('{{@../key}}','{{category}}')" type="button" name="submit">Submit</button>
                                                                 </div>    
                                                             </div>
                                                         </div>                                         
