--- a/visualization/index.html
+++ b/visualization/index.html
@@ -124,7 +124,7 @@
 <link rel="stylesheet" type="text/css" href="css/viz-style-sidebar.css">
 
 <script src="//d3js.org/d3.v5.min.js"></script>
-<script src="js/d3-sidebar.js"></script>
+<script src="js/d3.js"></script>
 <script
         src="//code.jquery.com/ui/1.12.0/jquery-ui.min.js"
         integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
