Add functionality to view active/brushed nodes properties in a datatable and download in different formats

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -71,7 +71,9 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#" onclick="downloadData('properties')">Properties</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" onclick="downloadData('counts')" href="#">Data Summary</a>    
+                    <a class="dropdown-item" onclick="downloadData('counts')" href="#">Data Summary</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" onclick="viewData()">View Data</a>     
                 </div>
             </div>            
         </div>
@@ -273,7 +275,9 @@
         <div id="goto">
             <a href="scatterplot.html">See Pair Plots</a>
         </div>
-
+        <div id="goto-viewData">
+            <a href="viewdata.html">Datatable</a>
+        </div>
     </div>
 </div>
 <div class="sidebar-overlay"></div>
