--- a/visualization/index.html
+++ b/visualization/index.html
@@ -68,10 +68,8 @@
                 <button href="" class="btn btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Download Data                              
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#" onclick="downloadData('properties')">Properties</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" onclick="downloadData('counts')" href="#">Data Summary</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">      
+                    <a class="dropdown-item" onclick="viewDataSummary()" href="#">View Data Summary</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" onclick="viewData()">View Data</a>     
                 </div>
