--- a/visualization/viewdatasummary.html
+++ b/visualization/viewdatasummary.html
@@ -25,12 +25,9 @@
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.0/js/buttons.flash.min.js"></script>  
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>  
-  <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script> 
-  
-  <script src="js/viewdata.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
  
- 
-
+  <script src="js/viewdatasummary.js"></script>
 </head>
 <body>
 
@@ -38,22 +35,41 @@
 		<div class="col-lg-2"></div>
 		<div class="col-lg-8">
 			<h2 style="margin-top:40px;text-align:center;">
-			Properties Of Active Nodes
+			Data Summary Of Active Nodes
 			</h2>
 		</div>
         <div class="col-lg-2"></div>
 	</div>
+
+    <br><br>
  
-	<!-- TABLE -->
+	<!-- BOOLEAN AND NUMERICAL ATTRBIUTES TABLE -->
 	<div class="row">
-		<div class="col-lg-2"></div>
-    	<div class="col-lg-8">
-    		<div class="card" style="overflow-x:auto;margin-top:20px;padding:10px;">
-        	<table class="table table-striped table-bordered" id="datatable">                       
-        	</table>
+		<div class="col-lg-3"></div>
+    	<div class="col-lg-6">
+            <div class="row">
+
+                <!-- BOOLEAN ATTRBIUTES TABLE -->
+                <div class="col">
+                    <div class="card-header" style="text-align:center;font-weight:bold;">Boolean Attributes Table</div>                      
+    		        <div class="card" style="overflow-x:auto;margin-top:20px;padding:10px;">
+        	            <table class="table table-striped table-bordered" id="boolean_table">  
+        	            </table>
+                    </div>
+                </div>
+
+                <!-- NUMERICAL ATTRBIUTES TABLE -->
+                <div class="col">
+                    <div class="card-header" style="text-align:center;font-weight:bold;">Numerical Attributes Table</div>                      
+                    <div class="card" style="overflow-x:auto;margin-top:20px;padding:10px;">
+                        <table class="table table-striped table-bordered" id="numerical_table">  
+                        </table>
+                    </div>    
+                </div>
+
             </div>
     	</div>
-    	<div class="col-lg-2"></div>
+    	<div class="col-lg-3"></div>
 	</div>
 </body>
 </html>
