--- a/visualization/viewdatasummary.html
+++ b/visualization/viewdatasummary.html
@@ -35,18 +35,37 @@
 		<div class="col-lg-2"></div>
 		<div class="col-lg-8">
 			<h2 style="margin-top:40px;text-align:center;">
-			Data Summary Of Active Nodes
+			    Data Summary Of Active Nodes
 			</h2>
+            <br>
+            <div id="filters" style="text-align:center;">
+                <h4>Active Filters</h4>
+            </div>
 		</div>
         <div class="col-lg-2"></div>
 	</div>
 
     <br><br>
+
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+            <div class="row">
+                <div class="col">
+                    <a class="btn btn-secondary btn-block" type="button" href="#boolean-numerical" data-toggle="collapse">
+                        Boolean And Numerical Attributes Tables
+                    </a>
+                </div>
+            </div>            
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
  
+    <div id="boolean-numerical" class="collapse in" style="margin-top:20px;margin-bottom:20px;">
 	<!-- BOOLEAN AND NUMERICAL ATTRBIUTES TABLE -->
 	<div class="row">
-		<div class="col-lg-3"></div>
-    	<div class="col-lg-6">
+		<div class="col-lg-2"></div>
+    	<div class="col-lg-8">
             <div class="row">
 
                 <!-- BOOLEAN ATTRBIUTES TABLE -->
@@ -69,19 +88,35 @@
 
             </div>
     	</div>
-    	<div class="col-lg-3"></div>
+    	<div class="col-lg-2"></div>
 	</div>
+    </div>    
+
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+            <div class="row">
+                <div class="col">
+                    <a class="btn btn-secondary btn-block" type="button" href="#categorical" data-toggle="collapse">
+                       Categorical Attributes Tables
+                    </a>
+                </div>
+            </div>            
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
 
     <br><br>
     <!-- CATEGORICAL AND NUMERICAL ATTRBIUTES TABLE -->
+    <div id="categorical" class="collapse in">
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
             <div id="categorical_section">
-                <script id="categorical_table" type="text/x-handlebars-template">
+                <script id="categorical_table" type="text/x-handlebars-template">               
                     {{#each categoricalData}}
                         <div class="row">
-                            {{#each this}}                         
+                            {{#each this}}                                                      
                                 <div class="col">
                                     <div class="card-header" style="text-align:center;font-weight:bold;">{{@key}}</div>                      
                                     <div class="card" style="overflow-x:auto;margin-top:20px;padding:10px;">
@@ -102,15 +137,16 @@
                                             </tbody>  
                                         </table>
                                     </div>
-                                </div>
+                                </div>                                
                             {{/each}}   
                         </div>
                         <br>
-                    {{/each}}
+                    {{/each}}                    
                 </script>
             </div>
         </div>
         <div class="col-lg-2"></div>
+    </div>
     </div>
 </body>
 </html>
