Minor code refactoring

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -306,7 +306,7 @@
 
 <script src="js/user-interface.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-<script src="js/d3.js"></script>
+<script src="js/renderNetworkGraph.js"></script>
 </body>
 
 </html>
