Rename some files, also restrict search to only filtered active nodes

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -80,8 +80,7 @@
             This visualization allows us to view the Lexicon as a network graph. Each circular represents a sign. Click on a sign to view properties.
                 You can search for a sign using the search bar, or filter signs of interest by using the filter option below. You can also select a subset of signs by dragging your mouse cursor over them.
 
-        </ul><br>
-
+        </ul>
         <ul class="list-unstyled CTAs">
 
             <li>Search For A Word</li>
@@ -304,7 +303,7 @@
         integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
         crossorigin="anonymous"></script>
 
-<script src="js/user-interface.js"></script>
+<script src="js/userInterface.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 <script src="js/renderNetworkGraph.js"></script>
 </body>
