--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -124,7 +124,7 @@
         integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
         crossorigin="anonymous"></script>
 
-<script src="js/user-interface.js"></script>
+<script src="js/userInterface.js"></script>
 <script src="js/scatterplotMat.js"></script>
 
 </body>
