--- a/visualization/viewdata.html
+++ b/visualization/viewdata.html
@@ -27,7 +27,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>  
   <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script> 
   
-  <script src="js/viewdata.js"></script>
+  <script src="js/viewData.js"></script>
  
  
 
