--- a/visualization/viewdatasummary.html
+++ b/visualization/viewdatasummary.html
@@ -27,7 +27,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>  
   <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
  
-  <script src="js/viewdatasummary.js"></script>
+  <script src="js/viewDataSummary.js"></script>
 </head>
 <body>
 
