--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -22,7 +22,7 @@
             theme: "minimal"
         });
 
-        $('#dismiss, .sidebar-overlay').on('click', function () {
+        $('#dismiss').on('click', function () {
             $('#sidebar').removeClass('active');
             $('.sidebar-overlay').removeClass('active');
         });
