--- a/visualization/viewdatasummary.html
+++ b/visualization/viewdatasummary.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
-    
-  
     <!-- jquery -->
     
     <!-- jquery -->
@@ -20,26 +18,28 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css"/>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/style.css"/>
 
-<script type="text/javascript" src="https://cdn.datatables.net/v/bs/jqc-1.12.4/dt-1.10.15/r-2.1.1/datatables.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.0/js/buttons.flash.min.js"></script>  
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>  
-  <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs/jqc-1.12.4/dt-1.10.15/r-2.1.1/datatables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.0/js/buttons.flash.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
  
   <script src="js/viewDataSummary.js"></script>
 </head>
-<body>
+
+<body style="overflow-x:scroll;overflow-y:scroll;">
 
 	<div class="row">
 		<div class="col-lg-2"></div>
 		<div class="col-lg-8">
 			<h2 style="margin-top:40px;text-align:center;">
-			    Data Summary Of Active Nodes
+			    Data summary of active nodes
 			</h2>
             <br>
             <div id="filters" style="text-align:center;">
-                <h4>Active Filters</h4>
+                <h4>Active Filters: </h4>
             </div>
 		</div>
         <div class="col-lg-2"></div>
@@ -47,12 +47,12 @@
 
     <br><br>
 
-    <div class="row">
+    <div class="row accordion-link">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
             <div class="row">
                 <div class="col">
-                    <a class="btn btn-secondary btn-block" type="button" href="#boolean-numerical" data-toggle="collapse">
+                    <a id="numericalTable" class="btn btn-secondary btn-block" type="button" href="#boolean-numerical" data-toggle="collapse">
                         Boolean And Numerical Attributes Tables
                     </a>
                 </div>
@@ -97,7 +97,7 @@
         <div class="col-lg-8">
             <div class="row">
                 <div class="col">
-                    <a class="btn btn-secondary btn-block" type="button" href="#categorical" data-toggle="collapse">
+                    <a id="categoricalTable" class="btn btn-secondary btn-block" type="button" href="#categorical" data-toggle="collapse">
                        Categorical Attributes Tables
                     </a>
                 </div>
