Add loader to Show Data page, Data Summary page, and Scatterplot Matrix page

--- a/visualization/viewdatasummary.html
+++ b/visualization/viewdatasummary.html
@@ -30,7 +30,7 @@
 </head>
 
 <body style="overflow-x:scroll;overflow-y:scroll;">
-
+    <div style="" id="loadingDiv"><div class="loader">Loading...</div></div>
 	<div class="row">
 		<div class="col-lg-2"></div>
 		<div class="col-lg-8">
