--- a/visualization/viewdata.html
+++ b/visualization/viewdata.html
@@ -33,7 +33,8 @@
 
 
 </head>
-<body style="overflow-x:scroll;overflow-y:scroll;">
+<body>
+<div style="" id="loadingDiv"><div class="loader">Loading...</div></div>
 <div class="row">
     <div class="col-lg-2"></div>
     <div class="col-lg-8">
@@ -55,5 +56,6 @@
     </div>
     <div class="col-lg-2"></div>
 </div>
+<link rel="stylesheet" href="css/style.css"/>
 </body>
 </html>
